<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">爱宠社区</string>
    <string name="AccountHint">手机号</string>
    <string name="Password">密码</string>
    <string name="Login">登陆</string>
    <string name="RememberPwd">记住密码</string>
    <string name="ForgetPwd">忘记密码</string>
    <string name="Register">新用户注册</string>
<!--    <string name="tab_menu_setting">setting</string>-->
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting" tools:ignore="DuplicateDefinition">寄养</string>
    <string name="tab_menu_profile">婚介</string>
    <string name="tab_menu_alert">百科</string>
<!--    <string name="tab_menu_pay" tools:ignore="DuplicateDefinition">我的</string>-->

    <!--下拉菜单的名字-->
    <string name="zu_quyu">区域</string>
    <string name="zu_money">价格区间</string>
    <string name="zu_huxing">宠物种类</string>
    <string name="zu_laiyuan">排序</string>

    <string name="hello_world">Hello world!</string>
    <string name="content">
        到底了！
    </string>
</resources>
