<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="411dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/f_c_title"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/add_shop"
            android:text="宠物寄养"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="28sp"
            tools:ignore="HardcodedText,UnknownId" />

        <Spinner
            android:id="@+id/f_c_map"
            android:layout_width="70dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@+id/f_c_title"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="0dp" />
        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="55dp"
            android:background="#696969" />

        <Button
            android:id="@+id/add_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/view2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_marginBottom="-55dp"
            android:text="我要开店" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="387dp"
        android:layout_height="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:id="@+id/SearchCityStoreTopView"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/zu_choose_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/f_c_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/zu_quyu"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zu_money"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zu_huxing"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zu_laiyuan"
                android:textColor="@color/black" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="410dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ListView
                android:id="@+id/shop_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="411dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="1.0">

        <RadioGroup
            android:id="@+id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
            tools:ignore="NotSibling"
            tools:layout_editor_absoluteX="28dp">

            <RadioButton
                android:id="@+id/rb_setting"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_setting"
                android:text="@string/tab_menu_setting" />

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_message"
                android:text="@string/tab_menu_profile" />

            <RadioButton
                android:id="@+id/rb_channel"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_channel"
                android:text="@string/tab_menu_alert" />


            <RadioButton
                android:id="@+id/rb_better"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_better"
                android:text="@string/tab_menu_pay" />


        </RadioGroup>

        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/rg_tab_bar"
            android:background="@color/div_white" />
    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>