<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="0dp"
    android:background="@drawable/main_rel2_shape"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/login_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:padding="10dp">
        <!--Logo-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/denglu" />

        <!--APP_Name-->
        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/login_view1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="225dp"
        android:background="@drawable/main_rel_shape"
        android:alpha="0.6"
        android:padding="10dp">


        <!--账号-->
        <EditText
            android:id="@+id/d_l_account"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@android:drawable/ic_menu_myplaces"
            android:drawableTint="@color/colorPrimaryDark"
            android:hint="用户名"
            android:inputType="text" />

        <!--密码-->
        <EditText
            android:id="@+id/d_l_pwd"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_below="@+id/d_l_account"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />



        <!--登录按钮-->

        <Button
            android:id="@+id/d_l_login"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@+id/d_l_pwd"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/main_signbtn_shape"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!--记住密码-->
        <CheckBox
            android:id="@+id/login_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d_l_pwd"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:checked="true"
            android:text="@string/RememberPwd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />
        <Button
            android:id="@+id/d_l_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d_l_login"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:text="@string/ForgetPwd"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/d_l_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d_l_login"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:text="@string/Register"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>
</RelativeLayout>